force-app/main/default/objects/Account/fields/AM_BalanceFee__c.field-meta.xml
<CustomField>
    <fullName>AM_BalanceFee__c</fullName>
    <formula>IF( NOT( ISBLANK( Course__c ) ) , AM_CourseFee__c  -   AM_PaidAmount__c 
, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>