force-app/main/default/objects/Account/fields/AM_FeeReceived__c.field-meta.xml
<CustomField>
    <fullName>AM_FeeReceived__c</fullName>
    <label>Fee Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>