force-app/main/default/objects/Account/fields/AM_PaidAmount__c.field-meta.xml
<CustomField>
    <fullName>AM_PaidAmount__c</fullName>
    <label>Paid Amount</label>
    <summarizedField>AM_Payment__c.TM_Amount__c</summarizedField>
    <summaryForeignKey>AM_Payment__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>