force-app/main/default/objects/Account/fields/AM_Payment_Link_URL__c.field-meta.xml
<CustomField>
    <fullName>AM_Payment_Link_URL__c</fullName>
    <label>Payment Link URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>