force-app/main/default/objects/Account/fields/Amount_for_Payment_Link__c.field-meta.xml
<CustomField>
    <fullName>Amount_for_Payment_Link__c</fullName>
    <inlineHelpText>Enter a Amount here for which payment link to be shared with Student.</inlineHelpText>
    <label>Amount for Payment Link</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>